src/test/resources/syntax_errors/reserved_word_as_var3.notc
void main() {
    int a, b, return, c;
}
